# quadruped_ros2_control_MPC

src/quadruped_ros2_control-humble/controllers/leg_pd_controller/include/leg_pd_controller/: LegPdController.h
src/quadruped_ros2_control-humble/controllers/leg_pd_controller/src/: LegPdController.cpp
src/quadruped_ros2_control-humble/controllers/unitree_guide_controller/: CMakeLists.txt
src/quadruped_ros2_control-humble/controllers/unitree_guide_controller/include/unitree_guide_controller/FSM/: StateTrotting.h
src/quadruped_ros2_control-humble/controllers/unitree_guide_controller/include/unitree_guide_controller/control/: MPC.h
src/quadruped_ros2_control-humble/controllers/unitree_guide_controller/src/FSM/: StateTrotting.cpp
src/quadruped_ros2_control-humble/controllers/unitree_guide_controller/src/control/: MPC.cpp
src/quadruped_ros2_control-humble/libraries/qpoases_colcon/: CMakeLists.txt
